--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,4 +1,6 @@
 {
+  "already.registered.modal.button": "تسجيل الدخول",
+  "already.registered.modal.title": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgot your password?\" below",
   "applications.title": "جست أرايفد",
   "apply.for.job.form.message.section": "Anything else you want us to know?",
   "apply.for.job.form.submit.button": "Apply",
@@ -54,7 +56,7 @@
   "confirmation.contact.description": "We will reply as soon as we can.",
   "confirmation.contact.title": "شكراً لرسالتك!",
   "confirmation.password.reset.button": "تسجيل الدخول",
-  "confirmation.password.reset.description": "يمكنك الآن تسجيل دخولك باستخدام كلمة سرك الجديدة ",
+  "confirmation.password.reset.description": "You can now log in using your new password.",
   "confirmation.password.reset.link.button": "عودة",
   "confirmation.password.reset.link.description": "إذا تتبعت الرابط المذكور بالرسالة، يمكنك حينها تعيين كلمة مرور جديدة.",
   "confirmation.password.reset.link.title": "أُرسلت إليك رسالة إعادة تعيين بكلمة المرور!",
@@ -76,7 +78,9 @@
   "faq.title": "أسئلة وأجوبة",
   "forbidden.error.description": "Sorry, you’re not allowed to perform that action.",
   "forbidden.error.title": "Forbidden",
-  "forgot.password.login.link": "تسجيل الدخول",
+  "forgot.password.login.link": "Log in instead",
+  "forgot.password.modal.button": "إرسال",
+  "forgot.password.modal.title": "استعادة كلمة المرور",
   "forgot.password.submit.error": "للأسف، تعذر إرسال رابط إعادة تعيين كلمة المرور.",
   "forgot.password.title": "استعادة كلمة المرور",
   "home.header.logged.in.jobs.button": "إيجاد وظيفة",
@@ -87,7 +91,7 @@
   "home.header.logged.out.register.button": "إنشاء حساب",
   "home.header.logged.out.sub.title": "أحصل على الخبرة التي تريد لكي تدخل سوق العمل السويدية ",
   "home.header.logged.out.title": "مرحبًا!",
-  "home.instructions.first.section.instruction0": "سجل دخولك أو أنشئ حساب ",
+  "home.instructions.first.section.instruction0": "Log in or create an account",
   "home.instructions.first.section.instruction1": "فتش على عمل بالقرب منك",
   "home.instructions.first.section.instruction2": "تلقى عرض ",
   "home.instructions.first.section.instruction3": "قبول عرض",
@@ -95,7 +99,7 @@
   "home.instructions.second.section.description": "حتى تتمكن من زيادة فرصك في الحصول على عمل:",
   "home.instructions.second.section.instruction1": "تقدم إلى جميع الوظائف التي تعجبك",
   "home.instructions.second.section.instruction2": "املأ ملفك الشخصي",
-  "home.instructions.second.section.instruction3": "قم بزيارة الصفحة غالبا وتأكد من أن ملفك الشخصي محدثاً دائماً",
+  "home.instructions.second.section.instruction3": "Log in often and make sure your profile is up to date",
   "home.instructions.second.section.title": "قم بزيادة فرصك ",
   "home.jobs.applied.for.title": "الوظائف المتقدم لها",
   "home.jobs.slider.new.jobs.title": "وظائف جديدة",
@@ -209,8 +213,8 @@
   "login.form.forgot.password.link": "نسيت كلمة السرّ؟",
   "login.form.register.link": "إنشاء حساب",
   "login.form.submit.button": "تسجيل الدخول",
-  "login.modal.button": "Login",
-  "login.modal.title": "Login",
+  "login.modal.button": "تسجيل الدخول",
+  "login.modal.title": "تسجيل الدخول",
   "login.title": "تسجيل الدخول",
   "lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline",
   "lost.connection.title": "Lost connection",
@@ -236,10 +240,14 @@
   "menu.main.staffing_time_report": "Time report",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - صفحة غير موجودة",
-  "register.modal.button": "تسجيل الاشتراك",
-  "register.modal.title": "تسجيل الاشتراك",
+  "register.form.login.button": "Log in now",
+  "register.form.login.section": "Already got an account?",
+  "register.modal.button": "Register",
+  "register.modal.title": "Register",
   "registered.modal.description": "Your account was successfully created",
   "registered.modal.title": "مرحبًا {{username}}!",
+  "reset.password.form.forgot.password.link": "Forgot password",
+  "reset.password.form.login.link": "تسجيل الدخول",
   "reset.password.form.submit.button": "تغيير كلمة المرور",
   "reset.password.title": "حدد كلمة مرورك الجديدة ",
   "sign.for.job.form.submit.button": "Sign",
@@ -272,9 +280,9 @@
   "user.register.form.general.information.section.header": "General information",
   "user.register.form.password.section.header": "كلمة السر",
   "user.register.form.settings.section.header": "اِعدادات",
-  "user.register.form.submit.button": "تسجيل الاشتراك",
+  "user.register.form.submit.button": "Register",
   "user.register.form.terms.section.header": "Terms and conditions",
-  "user.register.title": "انقر للإخفاء.",
+  "user.register.title": "Register",
   "user.settings.form.address.header": "العنوان",
   "user.settings.form.bank.details.header": "معلومات مصرفية",
   "user.settings.form.change.password.header": "تغيير كلمة المرور",
