--- a/src/assets/i18n/ps.json
+++ b/src/assets/i18n/ps.json
@@ -1,4 +1,6 @@
 {
+  "already.registered.modal.button": "ننوتل",
+  "already.registered.modal.title": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgot your password?\" below",
   "applications.title": "Just Arrived (جسټ آرایوډ)",
   "apply.for.job.form.message.section": "Anything else you want us to know?",
   "apply.for.job.form.submit.button": "Apply",
@@ -36,7 +38,7 @@
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "common.find_assignment": "Hitta uppdrag",
   "common.hour": "tim",
-  "common.login": "Sign in",
+  "common.login": "ننوتل",
   "common.min": "min",
   "common.net_salary": "after tax",
   "common.no": "نه",
@@ -53,8 +55,8 @@
   "confirmation.contact.button": "بیرته اړیکې ته",
   "confirmation.contact.description": "We will reply as soon as we can.",
   "confirmation.contact.title": "Thanks for your message!",
-  "confirmation.password.reset.button": "Sign in",
-  "confirmation.password.reset.description": "You can now sign in using your new password.",
+  "confirmation.password.reset.button": "ننوتل",
+  "confirmation.password.reset.description": "You can now log in using your new password.",
   "confirmation.password.reset.link.button": "شا ته",
   "confirmation.password.reset.link.description": "If you follow the link provided in the message you can thereafter set a new password.",
   "confirmation.password.reset.link.title": "A password reset message has been sent to you!",
@@ -76,18 +78,20 @@
   "faq.title": "پوښتنې او ځوابونه",
   "forbidden.error.description": "Sorry, you’re not allowed to perform that action.",
   "forbidden.error.title": "Forbidden",
-  "forgot.password.login.link": "Sign in",
+  "forgot.password.login.link": "Log in instead",
+  "forgot.password.modal.button": "لیږل",
+  "forgot.password.modal.title": "Restore password",
   "forgot.password.submit.error": "Unfortunately, a password reset link could not be sent.",
   "forgot.password.title": "Restore password",
   "home.header.logged.in.jobs.button": "د ګومارنې موندل",
   "home.header.logged.in.profile.button": "Edit profile",
   "home.header.logged.in.title": "Welcome {{username}}!",
   "home.header.logged.out.description": "Just Arrived helps you get the credentials you need to enter the Swedish labor market by matching you with Swedish companies. Right now Just Arrived mediates jobs in Stockholm, Gothenburg and Malmö. Create an account to get started!",
-  "home.header.logged.out.login.button": "Sign in",
+  "home.header.logged.out.login.button": "ننوتل",
   "home.header.logged.out.register.button": "د حساب رامینځته کول",
   "home.header.logged.out.sub.title": "Get the experience you need to enter the Swedish labor market",
   "home.header.logged.out.title": "Welcome!",
-  "home.instructions.first.section.instruction0": "Sign in or create an account",
+  "home.instructions.first.section.instruction0": "Log in or create an account",
   "home.instructions.first.section.instruction1": "Apply for jobs near you",
   "home.instructions.first.section.instruction2": "Receive offer",
   "home.instructions.first.section.instruction3": "Accept offer",
@@ -95,7 +99,7 @@
   "home.instructions.second.section.description": "In order to increase your chances getting a job:",
   "home.instructions.second.section.instruction1": "Apply to all jobs that you like",
   "home.instructions.second.section.instruction2": "Fill out your profile",
-  "home.instructions.second.section.instruction3": "Sign in often and make sure your profile is up to date",
+  "home.instructions.second.section.instruction3": "Log in often and make sure your profile is up to date",
   "home.instructions.second.section.title": "Maximize your chances",
   "home.jobs.applied.for.title": "Jobs applied for",
   "home.jobs.slider.new.jobs.title": "نوې ګومارنې",
@@ -208,10 +212,10 @@
   "language.proficiency.professional": "Professional proficiency",
   "login.form.forgot.password.link": "Glömt lösenord?",
   "login.form.register.link": "د حساب رامینځته کول",
-  "login.form.submit.button": "Sign in",
-  "login.modal.button": "Login",
-  "login.modal.title": "Login",
-  "login.title": "Sign in",
+  "login.form.submit.button": "ننوتل",
+  "login.modal.button": "ننوتل",
+  "login.modal.title": "ننوتل",
+  "login.title": "ننوتل",
   "lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline",
   "lost.connection.title": "Lost connection",
   "map.geolocation.error.close": "Click to hide.",
@@ -228,7 +232,7 @@
   "menu.main.contact": "اړیکه",
   "menu.main.faq": "پوښتنې او ځوابونه",
   "menu.main.find_assignment": "د ګومارنې موندل",
-  "menu.main.login": "Sign in",
+  "menu.main.login": "ننوتل",
   "menu.main.logout": "وتل",
   "menu.main.my_assignment": "زما ګومارنه",
   "menu.main.profile": "پروفایل",
@@ -236,10 +240,14 @@
   "menu.main.staffing_time_report": "Time report",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
-  "register.modal.button": "Sign up",
-  "register.modal.title": "Sign up",
+  "register.form.login.button": "Log in now",
+  "register.form.login.section": "Already got an account?",
+  "register.modal.button": "Register",
+  "register.modal.title": "Register",
   "registered.modal.description": "Your account was successfully created",
   "registered.modal.title": "Welcome {{username}}!",
+  "reset.password.form.forgot.password.link": "Forgot password",
+  "reset.password.form.login.link": "ننوتل",
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
   "sign.for.job.form.submit.button": "Sign",
@@ -272,9 +280,9 @@
   "user.register.form.general.information.section.header": "General information",
   "user.register.form.password.section.header": "Lösenord",
   "user.register.form.settings.section.header": "Inställningar",
-  "user.register.form.submit.button": "Sign up",
+  "user.register.form.submit.button": "Register",
   "user.register.form.terms.section.header": "Terms and conditions",
-  "user.register.title": "Sign up",
+  "user.register.title": "Register",
   "user.settings.form.address.header": "Address",
   "user.settings.form.bank.details.header": "Bankuppgifter",
   "user.settings.form.change.password.header": "Change password",
