--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -1,4 +1,6 @@
 {
+  "already.registered.modal.button": "Logga in",
+  "already.registered.modal.title": "Det verkar som att det redan finns ett konto som använder {{emailOrPhone}}, så vi föreslår att du loggar in istället. Om du har glömt ditt lösenord så kan ändra det genom att klicka på \"Glömt ditt lösenord\" nedan",
   "applications.title": "Just Arrived",
   "apply.for.job.form.message.section": "Någonting mer du vill att vi visa ska veta?",
   "apply.for.job.form.submit.button": "Ansök",
@@ -54,7 +56,7 @@
   "confirmation.contact.description": "Vi kommer svara så snart vi kan",
   "confirmation.contact.title": "Tack för ditt meddelande!",
   "confirmation.password.reset.button": "Logga in",
-  "confirmation.password.reset.description": "Du kan nu logga in med ditt nya lösenord.",
+  "confirmation.password.reset.description": "Du kan nu logga in med ditt nya lösenord",
   "confirmation.password.reset.link.button": "Tillbaka",
   "confirmation.password.reset.link.description": "Om du klickar på länken som finns i meddelandet kan du välja nytt lösenord.",
   "confirmation.password.reset.link.title": "Instruktioner om hur det återställer dit lösenord har skickats till dig!",
@@ -76,7 +78,9 @@
   "faq.title": "Frågor och svar",
   "forbidden.error.description": "\nTyvärr, du har inte tillåtelse att utföra åtgärden.",
   "forbidden.error.title": "Otillåtet",
-  "forgot.password.login.link": "Logga in",
+  "forgot.password.login.link": "Logga in istället",
+  "forgot.password.modal.button": "Skicka",
+  "forgot.password.modal.title": "Återställ lösenord",
   "forgot.password.submit.error": "Tyvärr så kunde inte länken för lösenordsåterställning skickas till dig.",
   "forgot.password.title": "Återställ lösenord",
   "home.header.logged.in.jobs.button": "Hitta uppdrag",
@@ -236,10 +240,14 @@
   "menu.main.staffing_time_report": "Tidsrapportera",
   "page.not.found.error.description": "Vi ber om ursäkt, sidan eller resursen du letar efter finns inte.",
   "page.not.found.error.title": "404 - Sidan kan inte hittas",
+  "register.form.login.button": "Logga in nu",
+  "register.form.login.section": "Har du redan ett konto?",
   "register.modal.button": "Registrera",
   "register.modal.title": "Registrera",
   "registered.modal.description": "Ditt konto har skapats utan problem",
   "registered.modal.title": "Välkommen {{username}}!",
+  "reset.password.form.forgot.password.link": "Glömt lösenordet",
+  "reset.password.form.login.link": "Logga in",
   "reset.password.form.submit.button": "Byt lösenord",
   "reset.password.title": "Skriv in ditt nya lösenord",
   "sign.for.job.form.submit.button": "Signera",
