--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "already.registered.modal.button": "Log in",
-  "already.registered.modal.title": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgot your password?\" below",
+  "already.registered.modal.title": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" below",
   "applications.title": "Just Arrived",
   "apply.for.job.form.message.section": "Anything else you want us to know?",
   "apply.for.job.form.submit.button": "Apply",
