Added home link to navigation bar

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -232,6 +232,7 @@
   "menu.main.contact": "Contact",
   "menu.main.faq": "Questions and Answers",
   "menu.main.find_assignment": "Find jobs",
+  "menu.main.home": "Home",
   "menu.main.login": "Log in",
   "menu.main.logout": "Log out",
   "menu.main.my_assignment": "My jobs",
