--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -204,7 +204,7 @@
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.card.currency.per.hour": "{{currency}}/hour",
   "job.card.hours": "{{hours}} hours",
-  "jobs.list.job_hours_and_hourly_salary": "{{hours}}h ({{hourlySalary}})",
+  "job.item.total.salary": "{{hours}}h ({{totalSalary}})",
   "jobs.title": "All jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "Basic knowledge",
   "language.proficiency.beginner": "Beginner",
