Added finished step on the missing user traits component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -267,6 +267,12 @@
   "user.account.cardnr": "Account number",
   "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
   "user.account": "Bank account details",
+  "user.missing.traits.form.close.button": "Close",
+  "user.missing.traits.form.information.provided.message.description": "You have successfully increased your chances to get jobs.",
+  "user.missing.traits.form.information.provided.message.header": "That is awesome!",
+  "user.missing.traits.form.submit.button": "Next",
+  "user.missing.traits.message.description": "Consider providing us with more information to increse your chances to get jobs",
+  "user.missing.traits.message.header": "We are interested in you",
   "user.profile.form.education.section.header": "Education",
   "user.profile.form.general.skills.section.header": "General skills",
   "user.profile.form.language.skills.section.header": "Language skills",
