bank account unified

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -117,10 +117,10 @@
   "input.apply.message.label": "Additonal message",
   "input.apply.message.placeholder": "Additonal message",
   "input.at.und.label": "Do you have an AT-UND permit? (Allowed to work during asylum)",
+  "input.bank.account.label": "Swedish bank account (clearing number + account number)",
+  "input.bank.account.placeholder": "Bank account",
   "input.city.label": "City",
   "input.city.placeholder": "City",
-  "input.clearing.number.label": "Clearing number",
-  "input.clearing.number.placeholder": "Clearing number",
   "input.competence.label": "General skills",
   "input.competence.placeholder": "General skills",
   "input.country.of.origin.label": "Country of origin",
@@ -263,10 +263,6 @@
   "skill.proficiency.professional": "Professional",
   "terms.frilans_finans.accept": "I accept Frilans Finans",
   "terms": "terms, conditions and employment contract",
-  "user.account.bank": "Clearing number",
-  "user.account.cardnr": "Account number",
-  "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
-  "user.account": "Bank account details",
   "user.missing.traits.form.close.button": "Close",
   "user.missing.traits.form.information.provided.message.description": "You have successfully increased your chances to get jobs.",
   "user.missing.traits.form.information.provided.message.header": "That is awesome!",
