Social networks links support

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -133,6 +133,8 @@
   "input.email.or.phone.label": "Email or phone",
   "input.email.or.phone.placeholder": "Email or phone",
   "input.email.placeholder": "Email",
+  "input.facebook.url.label": "Link to your facebook profile",
+  "input.facebook.url.placeholder": "Facebook profile",
   "input.first.name.label": "First name",
   "input.first.name.placeholder": "First name",
   "input.frilans.terms.label": "I accept Frilans Finans terms of employment",
@@ -147,6 +149,8 @@
   "input.languages.placeholder": "Language skills",
   "input.last.name.label": "Last name",
   "input.last.name.placeholder": "Last name",
+  "input.linkedin.url.label": "Link to your linkedin profile",
+  "input.linkedin.url.placeholder": "Linkedin profile",
   "input.lma.card.description": "Photo of my LMA card",
   "input.lma.card.header": "LMA card",
   "input.lma.card.label": "LMA card",
@@ -273,6 +277,7 @@
   "user.profile.form.general.skills.section.header": "General skills",
   "user.profile.form.language.skills.section.header": "Language skills",
   "user.profile.form.personal.presentation.section.header": "Personal presentation",
+  "user.profile.form.social.network.section.header": "Social networks",
   "user.profile.form.status.section.header": "Status",
   "user.profile.form.submit.button": "Save changes",
   "user.profile.form.work.experience.section.header": "Work experience",
@@ -301,6 +306,7 @@
   "user.update.form.personal.info.header": "Personal information",
   "user.update.form.personal.presentation.section.header": "Personal presentation",
   "user.update.form.settings.header": "Settings",
+  "user.update.form.social.network.section.header": "Social networks",
   "user.update.form.status.section.header": "Status",
   "user.update.form.submit.button": "Save changes",
   "validations.email_pattern": "must look like an email address",
