Job page redesigned and refactored

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -149,8 +149,8 @@
   "input.lma.card.description": "تحميل صورة من بطاقة LMA",
   "input.lma.card.header": "LMA card",
   "input.lma.card.label": "LMA card",
-  "input.message.label": "رسالة",
-  "input.message.placeholder": "رسالة",
+  "input.contact.message.label": "رسالة",
+  "input.contact.message.placeholder": "رسالة",
   "input.name.label": "الاسم",
   "input.name.placeholder": "الاسم",
   "input.new.password.label": "كلمة المرور الجديدة",
