--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,26 +13,13 @@
   "assignment.details": "Job details",
   "assignment.hours": "Hours",
   "assignment.rate.gross_salary": "gross salary",
-  "assignment.status.applied": "You have applied for this job",
-  "assignment.status.apply": "Apply for job",
-  "assignment.status.click_here": "Click here",
-  "assignment.status.company.approve_user": "would like you to hire you for this assignment",
-  "assignment.status.confirmation_error" : "An error occured when providing answer to this job.",
-  "assignment.status.create_account": "Create an account",
-  "assignment.status.finished": "Finished",
-  "assignment.status.hide_details": "To hide details",
-  "assignment.status.hired": "Hired",
-  "assignment.status.log_in": "Log in to apply",
-  "assignment.status.more_details": "For more details",
-  "assignment.status.offer.approve": "Would you still like to perform the job and can you commit to do so?",
-  "assignment.status.offer": "You have received an offer to do this job. Answer within",
   "assignment.status.performed": "Job performed",
-  "assignment.status.reply": "Accept offer",
   "assignment.status.user_company_hire": "The company wants to hire you",
   "assignment.status.you_hired": "You've been hired",
   "button.form.submit.fail": "There are some errors, please review them above.",
   "button.form.submit.success": "Success!",
   "card.document.upload.empty.documents": "Empty",
+  "comment.form.submit.button": "Send",
   "common.back": "Back",
   "common.close": "Close",
   "common.congratulation": "Congratulations!",
@@ -121,8 +108,11 @@
   "input.bank.account.placeholder": "Bank account",
   "input.city.label": "City",
   "input.city.placeholder": "City",
+  "input.comment.placeholder": "Wrtie a comment",
   "input.competence.label": "General skills",
   "input.competence.placeholder": "General skills",
+  "input.contact.message.label": "Message",
+  "input.contact.message.placeholder": "Write message",
   "input.country.of.origin.label": "Country of origin",
   "input.country.of.origin.placeholder": "Country of origin",
   "input.description.label": "Describe yourself",
@@ -154,8 +144,6 @@
   "input.lma.card.description": "Photo of my LMA card",
   "input.lma.card.header": "LMA card",
   "input.lma.card.label": "LMA card",
-  "input.message.label": "Message",
-  "input.message.placeholder": "Message",
   "input.name.label": "Name",
   "input.name.placeholder": "Name",
   "input.new.password.label": "New password",
@@ -204,11 +192,35 @@
   "input.work.permit.front.label": "Work permit (front photo)",
   "input.zip.label": "Zip code",
   "input.zip.placeholder": "Zip code",
+  "job.actions.header.applied": "You have applied for this job",
+  "job.actions.header.apply": "Apply for job",
+  "job.actions.header.confirm": "Accept offer",
+  "job.actions.header.hired": "Hired",
+  "job.actions.header.login": "Log in to apply",
+  "job.actions.header.offer": "You have received an offer to do this job. Answer within {{hours}} hours and {{minutes}} minutes.",
+  "job.actions.header.performed": "Job performed",
+  "job.actions.header.register": "Create an account",
+  "job.actions.section.applied": "You have applied for this job",
+  "job.actions.section.apply": "Apply for job",
+  "job.actions.section.confirm": "Accept offer",
+  "job.actions.section.hired": "Hired",
+  "job.actions.section.login": "Log in to apply",
+  "job.actions.section.offer": "You have received an offer to do this job. Answer within {{hours}} hours and {{minutes}} minutes.",
+  "job.actions.section.performed": "Job performed",
+  "job.actions.section.register": "Create an account",
   "job.additional.user.info.modal.button": "Continue",
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.card.currency.per.hour": "{{currency}}/hour",
   "job.card.hours": "{{hours}} hours",
+  "job.comments.section.title": "Comments",
+  "job.description.section.header": "Description",
+  "job.information.section.header": "Information",
   "job.item.total.salary": "{{hours}}h ({{totalSalary}})",
+  "job.location.section.header": "Location",
+  "job.scope.section.grossSalary": "{{grossSalary}} gross salary (before taxes)",
+  "job.scope.section.header": "Scope",
+  "job.scope.section.hours": "{{hours}} hours",
+  "job.scope.section.netSalary": "{{netSalary}} net salary (after taxes)",
   "jobs.title": "All jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "Basic knowledge",
   "language.proficiency.beginner": "Beginner",
