--- a/src/assets/i18n/ps.json
+++ b/src/assets/i18n/ps.json
@@ -149,8 +149,8 @@
   "input.lma.card.description": "Photo of my LMA card",
   "input.lma.card.header": "LMA card",
   "input.lma.card.label": "LMA card",
-  "input.message.label": "Meddelanden",
-  "input.message.placeholder": "Meddelanden",
+  "input.contact.message.label": "Meddelanden",
+  "input.contact.message.placeholder": "Meddelanden",
   "input.name.label": "نوم",
   "input.name.placeholder": "نوم",
   "input.new.password.label": "New password",
