--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -149,8 +149,8 @@
   "input.lma.card.description": "Foto av LMA-kort",
   "input.lma.card.header": "LMA-kort",
   "input.lma.card.label": "LMA-kort",
-  "input.message.label": "Meddelande",
-  "input.message.placeholder": "Meddelande",
+  "input.contact.message.label": "Meddelande",
+  "input.contact.message.placeholder": "Meddelande",
   "input.name.label": "Namn",
   "input.name.placeholder": "Namn",
   "input.new.password.label": "Nytt lösenord",
