--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -149,8 +149,8 @@
   "input.lma.card.description": "Photo of my LMA card",
   "input.lma.card.header": "LMA card",
   "input.lma.card.label": "LMA card",
-  "input.message.label": "پیامها",
-  "input.message.placeholder": "پیامها",
+  "input.contact.message.label": "پیامها",
+  "input.contact.message.placeholder": "پیامها",
   "input.name.label": "نام",
   "input.name.placeholder": "نام",
   "input.new.password.label": "New password",
