--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -108,7 +108,7 @@
   "input.bank.account.placeholder": "Bank account",
   "input.city.label": "City",
   "input.city.placeholder": "City",
-  "input.comment.placeholder": "Wrtie a comment",
+  "input.comment.placeholder": "Write a comment",
   "input.competence.label": "General skills",
   "input.competence.placeholder": "General skills",
   "input.contact.message.label": "Message",
@@ -215,7 +215,6 @@
   "job.comments.section.title": "Comments",
   "job.description.section.header": "Description",
   "job.information.section.header": "Information",
-  "job.item.total.salary": "{{hours}}h ({{totalSalary}})",
   "job.location.section.header": "Location",
   "job.scope.section.grossSalary": "{{grossSalary}} gross salary (before taxes)",
   "job.scope.section.header": "Scope",
