--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -1,6 +1,7 @@
 {
   "already.registered.modal.button": "Logga in",
-  "already.registered.modal.title": "Det verkar som att det redan finns ett konto som använder {{emailOrPhone}}, så vi föreslår att du loggar in istället. Om du har glömt ditt lösenord så kan ändra det genom att klicka på \"Glömt ditt lösenord\" nedan",
+  "already.registered.modal.info": "Det verkar som att det redan finns ett konto som använder {{emailOrPhone}}, så vi föreslår att du loggar in istället. Om du glömt ditt lösenord så kan du återställa det genom att klicka på \"Glömt ditt lösenord?\" ovan",
+  "already.registered.modal.title": "{{emailOrPhone}} är redan registrerat",
   "applications.title": "Just Arrived",
   "apply.for.job.form.message.section": "Någonting mer du vill att vi visa ska veta?",
   "apply.for.job.form.submit.button": "Ansök",
@@ -12,26 +13,13 @@
   "assignment.details": "Uppdragsbeskrivning",
   "assignment.hours": "Timmar",
   "assignment.rate.gross_salary": "bruttolön",
-  "assignment.status.applied": "Du har sökt uppdraget",
-  "assignment.status.apply": "Sök uppdraget",
-  "assignment.status.click_here": "Klicka här",
-  "assignment.status.company.approve_user": "vill anställa dig för det här uppdraget",
-  "assignment.status.confirmation_error" : "Ett fel uppstod när du försökte ge besked till det här jobbet.",
-  "assignment.status.create_account": "Skapa ett konto",
-  "assignment.status.finished": "Genomfört",
-  "assignment.status.hide_details": "Göm detaljer",
-  "assignment.status.hired": "Anlitad",
-  "assignment.status.log_in": "Logga in för att söka",
-  "assignment.status.more_details": "Mer detaljer",
-  "assignment.status.offer.approve": "Vill du fortfarande ha jobbet och kan du åta dig att utföra det?",
-  "assignment.status.offer": "Du har fått erbjudande om att utföra uppdraget. Svara inom",
   "assignment.status.performed": "Uppdrag utfört",
-  "assignment.status.reply": "Tacka ja",
   "assignment.status.user_company_hire": "Företaget vill anlita dig",
   "assignment.status.you_hired": "Du har blivit anställd",
   "button.form.submit.fail": "Det finns några fel du måste åtgärda ovan.",
   "button.form.submit.success": "Det gick bra!",
   "card.document.upload.empty.documents": "Tomt",
+  "comment.form.submit.button": "Skicka",
   "common.back": "Tillbaka",
   "common.close": "Stäng",
   "common.congratulation": "Grattis!",
@@ -116,12 +104,15 @@
   "input.apply.message.label": "Extra meddelande",
   "input.apply.message.placeholder": "Extra meddelande",
   "input.at.und.label": "Har du AT-UND? (Är du tillåten att jobba)",
+  "input.bank.account.label": "Svenskt bankkonto (clearing nummer + kontonummer)",
+  "input.bank.account.placeholder": "Bankkonto",
   "input.city.label": "Stad",
   "input.city.placeholder": "Stad",
-  "input.clearing.number.label": "Clearing nummer",
-  "input.clearing.number.placeholder": "Clearing nummer",
+  "input.comment.placeholder": "Skriv en kommentar",
   "input.competence.label": "Generella kompetenser",
   "input.competence.placeholder": "Generella kompetenser",
+  "input.contact.message.label": "Meddelande",
+  "input.contact.message.placeholder": "Skriv meddelande",
   "input.country.of.origin.label": "Hemland",
   "input.country.of.origin.placeholder": "Hemland",
   "input.description.label": "Beskriv dig själv",
@@ -132,6 +123,8 @@
   "input.email.or.phone.label": "Email eller telefonnummer",
   "input.email.or.phone.placeholder": "Email eller telefonnummer",
   "input.email.placeholder": "E-post",
+  "input.facebook.url.label": "Länk till din facebook profil",
+  "input.facebook.url.placeholder": "Facebook profil",
   "input.first.name.label": "Förnamn",
   "input.first.name.placeholder": "Förnamn",
   "input.frilans.terms.label": "Jag accepterar Frilans Finans anställningsvillkor",
@@ -146,11 +139,11 @@
   "input.languages.placeholder": "Språkkunskaper",
   "input.last.name.label": "Efternamn",
   "input.last.name.placeholder": "Efternamn",
+  "input.linkedin.url.label": "Länk till din linkedin profil",
+  "input.linkedin.url.placeholder": "Linkedin profil",
   "input.lma.card.description": "Foto av LMA-kort",
   "input.lma.card.header": "LMA-kort",
   "input.lma.card.label": "LMA-kort",
-  "input.contact.message.label": "Meddelande",
-  "input.contact.message.placeholder": "Meddelande",
   "input.name.label": "Namn",
   "input.name.placeholder": "Namn",
   "input.new.password.label": "Nytt lösenord",
@@ -199,11 +192,34 @@
   "input.work.permit.front.label": "Arbetstillstånd (framsidan)",
   "input.zip.label": "Postnummer",
   "input.zip.placeholder": "Postnummer",
+  "job.actions.header.applied": "Du har sökt uppdraget",
+  "job.actions.header.apply": "Sök uppdraget",
+  "job.actions.header.confirm": "Tacka ja",
+  "job.actions.header.hired": "Anlitad",
+  "job.actions.header.login": "Logga in för att söka",
+  "job.actions.header.offer": "Du har fått erbjudande om att utföra jobbet. Svara inom {{hours}} timmar och {{minutes}} minuter.",
+  "job.actions.header.performed": "Uppdrag utfört",
+  "job.actions.header.register": "Skapa ett konto",
+  "job.actions.section.applied": "Du har sökt uppdraget",
+  "job.actions.section.apply": "Sök uppdraget",
+  "job.actions.section.confirm": "Tacka ja",
+  "job.actions.section.hired": "Anlitad",
+  "job.actions.section.login": "Logga in för att söka",
+  "job.actions.section.offer": "Du har fått erbjudande om att utföra jobbet. Svara inom {{hours}} timmar och {{minutes}} minuter.",
+  "job.actions.section.performed": "Uppdrag utfört",
+  "job.actions.section.register": "Skapa ett konto",
   "job.additional.user.info.modal.button": "Fortsätt",
   "job.additional.user.info.modal.title": "\nFör att maximera dina chanser att få jobbet bör du överväga att ge följande information",
   "job.card.currency.per.hour": "{{currency}}/timmen",
   "job.card.hours": "{{hours}} timmar",
-  "jobs.list.job_hours_and_hourly_salary": "{{hours}} timmar ({{hourlySalary}})",
+  "job.comments.section.title": "Kommentarer",
+  "job.description.section.header": "Beskrivning",
+  "job.information.section.header": "Information",
+  "job.location.section.header": "Plats",
+  "job.scope.section.grossSalary": "{{grossSalary}} bruttolön (före skatt)",
+  "job.scope.section.header": "Omfattning",
+  "job.scope.section.hours": "{{hours}} timmar",
+  "job.scope.section.netSalary": "{{netSalary}} nettolön (efter skatt)",
   "jobs.title": "Alla uppdrag ({{nbrOfJobs}})",
   "language.proficiency.basic": "Grundläggande kunskaper",
   "language.proficiency.beginner": "Nybörjare",
@@ -232,6 +248,7 @@
   "menu.main.contact": "Kontakt",
   "menu.main.faq": "Frågor och Svar",
   "menu.main.find_assignment": "Hitta uppdrag",
+  "menu.main.home": "Hem",
   "menu.main.login": "Logga in",
   "menu.main.logout": "Logga ut",
   "menu.main.my_assignment": "Mina uppdrag",
@@ -261,14 +278,17 @@
   "skill.proficiency.professional": "Professionell",
   "terms.frilans_finans.accept": "Jag accepterar Frilans Finans",
   "terms": "regler, villkor och anställningskontrakt",
-  "user.account.bank": "Clearing nummer",
-  "user.account.cardnr": "Kontonummer",
-  "user.account.description": "Var vill du att lönen ska utbetalas till när du har utfört uppdraget?",
-  "user.account": "Bank konto",
+  "user.missing.traits.form.close.button": "Stäng",
+  "user.missing.traits.form.information.provided.message.description": "Du har framgångsrikt ökat dina chanser att få jobb.",
+  "user.missing.traits.form.information.provided.message.header": "Grymt jobbat!",
+  "user.missing.traits.form.submit.button": "Nästa",
+  "user.missing.traits.message.description": "Överväg att ge oss mer information för att öka dina chanser att få jobb",
+  "user.missing.traits.message.header": "Vi är intresserade av dig",
   "user.profile.form.education.section.header": "Utbildning",
   "user.profile.form.general.skills.section.header": "Generella kompetenser",
   "user.profile.form.language.skills.section.header": "Språkkunskaper",
   "user.profile.form.personal.presentation.section.header": "Personlig presentation",
+  "user.profile.form.social.network.section.header": "Sociala nätverk",
   "user.profile.form.status.section.header": "Status",
   "user.profile.form.submit.button": "Spara ändringar",
   "user.profile.form.work.experience.section.header": "Arbetslivserfarenhet",
@@ -297,6 +317,7 @@
   "user.update.form.personal.info.header": "Personlig information",
   "user.update.form.personal.presentation.section.header": "Personlig presentation",
   "user.update.form.settings.header": "Inställningar",
+  "user.update.form.social.network.section.header": "Sociala nätverk",
   "user.update.form.status.section.header": "Status",
   "user.update.form.submit.button": "Spara ändringar",
   "validations.email_pattern": "måste se ut som en epostadress",
