--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -132,6 +132,9 @@
   "input.gender.label": "Gender",
   "input.gender.placeholder": "Gender",
   "input.got.coordination.number.label": "Do you have a coordination number (samordningsnummmer)?",
+  "input.interests.hint": "Please rate how interested you are in the chosen interests",
+  "input.interests.label": "Interests",
+  "input.interests.placeholder": "Interests",
   "input.job.experience.label": "Work experience",
   "input.job.experience.placeholder": "Work experience",
   "input.languages.hint": "Please rate how good you are at the chosen languages",
@@ -286,6 +289,7 @@
   "user.missing.traits.message.header": "We are interested in you",
   "user.profile.form.education.section.header": "Education",
   "user.profile.form.general.skills.section.header": "General skills",
+  "user.profile.form.interests.section.header": "Interests",
   "user.profile.form.language.skills.section.header": "Language skills",
   "user.profile.form.personal.presentation.section.header": "Personal presentation",
   "user.profile.form.social.network.section.header": "Social networks",
