Add interests to dynamic forms too

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -317,6 +317,7 @@
   "user.update.form.bank.details.header": "Bank details",
   "user.update.form.education.section.header": "Education",
   "user.update.form.general.skills.section.header": "General skills",
+  "user.update.form.general.skills.section.header": "Interests",
   "user.update.form.language.skills.section.header": "Language skills",
   "user.update.form.personal.info.header": "Personal information",
   "user.update.form.personal.presentation.section.header": "Personal presentation",
