--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,9 +16,12 @@
   "assignment.status.performed": "Job performed",
   "assignment.status.user_company_hire": "The company wants to hire you",
   "assignment.status.you_hired": "You've been hired",
+  "basic.chat.messages.empty": "No messages yet",
+  "basic.comments.empty": "No comments yet",
   "button.form.submit.fail": "There are some errors, please review them above.",
   "button.form.submit.success": "Success!",
   "card.document.upload.empty.documents": "Empty",
+  "chat.form.submit.button": "Send",
   "comment.form.submit.button": "Send",
   "common.back": "Back",
   "common.close": "Close",
@@ -106,6 +109,7 @@
   "input.at.und.label": "Do you have an AT-UND permit? (Allowed to work during asylum)",
   "input.bank.account.label": "Swedish bank account (clearing number + account number)",
   "input.bank.account.placeholder": "Bank account",
+  "input.chat.message.placeholder": "Write a message",
   "input.city.label": "City",
   "input.city.placeholder": "City",
   "input.comment.placeholder": "Write a comment",
@@ -279,6 +283,8 @@
   "skill.proficiency.expert": "Expert",
   "skill.proficiency.intermediate": "Intermediate knowledge",
   "skill.proficiency.professional": "Professional",
+  "support.chat.page.title": "Chat with Just Arrived",
+  "support.chat.title": "Just Arrived",
   "terms.frilans_finans.accept": "I accept Frilans Finans",
   "terms": "terms, conditions and employment contract",
   "user.missing.traits.form.close.button": "Close",
