Added chat with just arrived to menu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -262,6 +262,7 @@
   "menu.main.profile": "Profile",
   "menu.main.register": "Create account",
   "menu.main.staffing_time_report": "Time report",
+  "menu.main.support.chat": "Chat with Just Arrived",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "register.form.login.button": "Log in now",
